# agent-skills

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  code-review.md  git-workflow.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
mcp-servers/ast-editor/: .gitignore  AST-EDITOR.md  README.md  pyproject.toml
mcp-servers/ast-editor/ast_editor/: applier.py  parser.py  server.py
mcp-servers/ast-editor/tests/: run_all_tests.py  run_tests.py  run_tests_config.py  run_tests_js.py  test_target.c  test_target.cpp  test_target.go  test_target.java  test_target.js  test_target.json  test_target.py  test_target.rb  test_target.toml  test_target.ts  test_target.yaml  test_target_decorated.py
mcp-servers/notebook-editor/: NOTEBOOK-EDITOR.md  README.md  pyproject.toml
mcp-servers/notebook-editor/notebook_editor/: kernel.py  manager.py  server.py
mcp-servers/notebook-editor/tests/: run_all_tests.py
mcp-servers/rmd-editor/: .gitignore  README.md  RMD-EDITOR.md  pyproject.toml
mcp-servers/rmd-editor/rmd_editor/: kernel.py  manager.py  parser.py  server.py
mcp-servers/rmd-editor/tests/: run_all_tests.py
skills/code-review/: SKILL.md
skills/deep-codebase-audit/: SKILL.md
skills/deep-codebase-audit/references/: references.md
skills/domain-glossary/: SKILL.md
skills/english-humanizer/: SKILL.md
skills/english-humanizer/resources/: references.md
skills/git-workflow/: SKILL.md
skills/grill-master/: SKILL.md
skills/incremental-tdd/: SKILL.md
skills/incremental-tdd/assets/: interface-design.md  mocking.md  tests.md
skills/incremental-tdd/references/: deep-modules.md  refactoring.md
skills/script-writer/: SKILL.md
skills/script-writer/references/: resources.md
skills/slice-the-spec/: SKILL.md
skills/spec-to-plan/: SKILL.md
skills/spec-writer/: SKILL.md
