[project]
name = "ast-editor-mcp"
version = "0.1.0"
description = "MCP Server for AST-targeted code editing"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.2.0",
    "tree-sitter>=0.21.0",
    "tree-sitter-python>=0.21.0",
    "tree-sitter-javascript>=0.21.0",
    "tree-sitter-typescript>=0.21.0",
    "tree-sitter-json>=0.21.0",
    "tree-sitter-yaml>=0.5.0",
    "tree-sitter-toml>=0.5.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
ast-editor-mcp = "ast_editor.server:main"

[tool.hatch.build.targets.wheel]
packages = ["ast_editor"]
